<resources>
    <string name="app_name">Discover</string>
    <string name="choose_language">Choose Language</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="frensh">Frensh</string>
    <string name="russian">Russia</string>
    <string name="italian">Italian</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget password? Reset</string>
    <string name="donot_have_account">Don\'t have account?</string>
    <string name="register">REGISTER</string>
    <string name="upload_your_photo">Upload Your Photo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="select_your_birthday">Select Your Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="forget_your_password">Forget Your Password ?</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="send">Send</string>
    <string name="new_password">New Pasword</string>
    <string name="change">Change</string>
    <string name="enter_email_address">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="minimum_password">Password must contains characters > 6</string>
    <string name="auth_failed">Failed to Login !</string>
    <string name="we_have_sent_you_instructions_to_reset_your_password">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send_reset_email">Failed to send reset email!</string>
    <string name="signning_in">Signing in ....</string>
    <string name="processing">Processing ....</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="password_faild_updated">Failed to udpate password</string>
    <string name="select_country">Select Country</string>
    <string name="password_short">Password too short, enter minimum 6 characters!</string>
    <string name="signing_up">Signing up ...</string>
    <string name="enter_your_phone">Enter your phone number!</string>
    <string name="enter_date">Choose your birthday</string>
    <string name="enter_your_name">Enter your name!</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="uploading">Uploading</string>
    <string name="failed_to_upload_photo">Failed to upload the photo</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="new_zeland">New Zeland</string>
    <string name="tab_whatever_your_are_interested_in">Tab whatever you are interested in</string>
    <string name="follow_yourinterested_countries">Follw your interested countries</string>
    <string name="next">Next</string>
    <string name="my_profile">My profile</string>
    <string name="hint_description">Description</string>
    <string name="message_post_was_created">Post was created</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post ..</string>
    <string name="message_saving">Saving ..</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_title">Title is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_post_title_length">Max length of the title should be less than 255 symbols</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>
    <string name="comment_text_hint">Enter your comment…</string>
    <string name="label_comments">Comments (%1$d):</string>
    <string name="create_post_menu_label">Post</string>
    <string name="create_post_full_menu_label">Create post</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>
    <string name="prompt_name">Name</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="loading">Loading...</string>
    <string name="removing">Removing...</string>
    <string name="error_general">Somthing went wrong.</string>
    <string name="error_general_post">Somthing went wrong with post, id: %1$s</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="profile_menu_item">Profile</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="edit_post_menu">Edit post</string>
    <string name="delete_post_menu">Delete post</string>
    <string name="send_comment_button_label">Send</string>
    <string name="posted_by_label">Posted by:</string>
    <plurals name="posts_counter_format">
        <item quantity="one">post</item>
        <item quantity="other">posts</item>
    </plurals>
    <plurals name="likes_counter_format">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>
    <string name="posts_label">Posts:</string>
    <string name="now_time_range">now</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="post_author_image_transition_name" translatable="false">post_author_image_transition_name</string>
    <string name="message_new_post_was_created">New post was created</string>
    <plurals name="new_posts_counter_format">
        <item quantity="one">%1$d new post</item>
        <item quantity="other">%1$d new posts</item>
    </plurals>
    <string name="edit_comment_menu_item">Edit</string>
    <string name="delete_comment_menu_item">Delete</string>
    <string name="message_comment_was_removed">Comment was removed</string>
    <string name="message_comment_was_edited">Comment was edited</string>
    <string name="title_edit_comment">Edit comment</string>
    <string name="permission_denied_error">Please check your rules to access the Firebase Realtime Database</string>
    <string name="get_all_friends">Get all friend....</string>
    <string name="deleting">Deleting....</string>
    <string name="error">Error</string>
    <string name="error_occured">Error occurred during deleting friend</string>
    <string name="friend_deleted_successfully">Friend deleted successfully</string>
    <string name="message">Message</string>
    <string name="send_amessage">Send a message</string>
    <string name="add_friend">Add friend</string>
    <string name="enter_friend_email">Enter friend email</string>
    <string name="ok">Ok</string>
    <string name="not_valid_email">Not valid email!</string>
    <string name="user">User</string>
    <string name="has_been_friend">has been friend</string>
    <string name="successfully_added_friend">Successfully added friend</string>
    <string name="interests">Interests</string>
    <string name="postss">Posts</string>
    <string name="edit">Edit</string>
    <string name="uae">UAE</string>
    <string name="vietnam">Vietnam</string>
    <string name="france">France</string>
    <string name="greece">Greece</string>
    <string name="india">India</string>
    <string name="italy">Italy</string>
    <string name="kenya">Kenya</string>
    <string name="egypt">Egypt</string>
    <string name="rissia">Russia</string>
    <string name="canada">Canada</string>
    <string name="email_not_found">Email not found</string>
    <string name="upload_video">Upload video</string>
    <string name="choose_video">Choose a video from gallary or open the camera</string>
    <string name="choose_from_camera">Open camera</string>
    <string name="open_gallary">Open gallary</string>
    <string name="skip">Skip</string>
    <string name="follow">FOLLOW</string>
    <string name="share">SHARE</string>
    <string name="slide1">And start to discover the adventure of others as you visit all over Egypt</string>
    <string name="slide3">Your travel adventures so you can get comments and likes and chating with others</string>
    <string name="slide2">Your interesting countries to see the adventures of them</string>
    <string name="country1">Morocco</string>
    <string name="country2">South Africa</string>
    <string name="country3">Tunisia</string>
    <string name="country4">Algeria</string>
    <string name="country5">Mozambique</string>
    <string name="country6">Zimbabwe</string>
    <string name="country7">Somalia</string>
    <string name="country8">Uganda</string>
    <string name="country9">Namibia</string>
    <string name="country10">Senegal</string>
    <string name="country11">Saudi</string>
    <string name="country12">Syria</string>
    <string name="country13">Jordan</string>
    <string name="country14">Iran</string>
    <string name="country15">Israel</string>
    <string name="country16">Diameter</string>
    <string name="country17">Lebanon</string>
    <string name="country18">To whom</string>
    <string name="country19">China</string>
    <string name="country20">Hong Kong</string>
    <string name="country21">Thailand</string>
    <string name="country22">Macao</string>
    <string name="country23">Singapore</string>
    <string name="country24">South Korea</string>
    <string name="country25">Japan</string>
    <string name="country26">Indonesia</string>
    <string name="country27">Australia</string>
    <string name="country28">Spain</string>
    <string name="country29">United kingdom</string>
    <string name="country30">Turkey</string>
    <string name="country31">Germany</string>
    <string name="country32">Austria</string>
    <string name="country33">Ukraine</string>
    <string name="cairo">Cairo</string>
    <string name="giza">Giza</string>
    <string name="alex">Alexandria</string>
    <string name="luxor">Luxor</string>
    <string name="aswan">Aswan</string>
    <string name="sharm">Sharm El-Shaikh</string>
    <string name="rasheed">Rashid</string>
    <string name="hargada">Hurghada</string>
    <string name="sahl_hashesh">Sahl Hashish</string>
    <string name="gona">El Gouna</string>
    <string name="saphaga">Safaga</string>
    <string name="soma_bay">Soma Bay</string>
    <string name="marsa_alam">Marsa Alam</string>
</resources>