<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/createPost"
        android:title="@string/create_post_full_menu_label"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/editProfile"
        android:title="@string/edit_profile_menu_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/my_profile"
        android:title="@string/my_profile"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/change_language"
        android:title="@string/choose_language"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out_menu_label"
        app:showAsAction="never" />
</menu>

