<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/choose_language_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/choose_language"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/choose_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_global" />

            <TextView
                android:id="@+id/language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/languages"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/languages_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/english"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/arabic"
                android:textColor="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/frensh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/frensh"
                android:textColor="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/russian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/russian"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/italian"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>