<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/follow_yourinterested_countries"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/tab_whatever_your_are_interested_in"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <include
            android:id="@+id/recycler"
            layout="@layout/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="90dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <Button
            android:id="@+id/next"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:text="@string/next"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>